--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 	<head>
 		<title>Darts_Arrange</title>
 		<link rel="stylesheet" href="css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script type="text/javascript" src="script/util.js"></script>
-		<script type="text/javascript" src="script/jcanvas.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jcanvas/21.0.1/min/jcanvas.min.js">
 		<script type="text/javascript" src="script/canvas.js"></script>
-		<script type="text/javascript" src="script/define_class.js"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
 	<body>
