--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 	<head>
 		<title>Darts_Arrange</title>
 		<link rel="stylesheet" href="css/style.css">
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jcanvas/21.0.1/min/jcanvas.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/21.0.1/min/jcanvas.min.js"></script>
 		<script type="text/javascript" src="script/darts_board.js"></script>
+		<script type="text/javascript">
+		$(function(){
+		    let db = new DartsBoard();
+		    db.drawBoard();
+		});
+		</script>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
 	<body>
